--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,82 @@
-h1 {
-    color: rgb(244, 66, 66);
-    font-size: 3rem;
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+    
+}
+
+
+
+/* HEADER */
+
+.navbar-expand-lg{
+    background-color: transparent;
+    z-index: 9999;
+}
+/* video */
+.video-header {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+.video-header video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -1;
+    transform: translate(-50%, -50%);
+}
+
+
+.rounded-btn {
+    border-radius: 20px; 
+}
+
+.gradient-btn {
+    color: #f8f9fa; 
+    border-color: #f8f9fa; 
+    background-color: transparent; 
+    
+
+}
+  
+.gradient-btn:hover {
+    background: linear-gradient(#150067, #3300ff); 
+    color: #ffffff; 
+    border-color: transparent; 
+
+}
+
+
+.logo {
+    width: 100%; 
+    height: auto; 
+    max-height: 100vh;
+    object-fit: contain; 
+}
+
+.logo-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100vh; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-fluid{
+    padding: 2em;
 }
