cards+hover+titulos

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@
 
 
 /* HEADER */
-
 .navbar-expand-lg{
     background-color: transparent;
     z-index: 9999;
@@ -103,4 +102,40 @@
 
 .img-fluid{
     padding: 2em;
+}
+
+/* LO PRINCIPAL */
+
+/* Efecto de zoom en las cards */
+.card {
+    position: relative;
+    overflow: hidden; 
+    border-radius: 20px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.card img {
+    width: 100%;
+    height: auto;
+    transition: transform 0.3s ease-in-out; 
+}
+
+.card:hover img {
+    transform: scale(1.1); 
+}
+
+.card-body {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 20px;
+    background: rgba(0, 0, 0, 0.5); 
+    color: white;
+    z-index: 1;
+    transition: background 0.3s ease-in-out;
+}
+
+.card:hover .card-body {
+    background: rgba(0, 0, 0, 0.7); 
 }
