--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
-
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style: none;
-    
-}
-
-
-
 /* HEADER */
 .navbar-expand-lg{
     background-color: transparent;
@@ -21,7 +7,6 @@
 .navbar-toggler-icon {
     filter: invert(1);
 }
-
 
 /* video */
 .video-header {
@@ -48,7 +33,6 @@
 
 .btn-outline-light{
     border-width: 0.9px; 
-
 }
 
 .rounded-btn {
@@ -60,17 +44,13 @@
     color: #f8f9fa; 
     border-color: #f8f9fa; 
     background-color: transparent; 
-    
-
 }
-  
+
 .gradient-btn:hover {
     background: linear-gradient(#150067, #3300ff); 
     color: #ffffff; 
     border-color: transparent; 
-
 }
-
 
 .logo {
     width: 100%; 
@@ -99,29 +79,27 @@
     margin: 1em;
 }
 
-
 .img-fluid{
     padding: 2em;
 }
 
 /* LO PRINCIPAL */
 
-/* Efecto de zoom en las cards */
 .card {
     position: relative;
     overflow: hidden; 
     border-radius: 20px;
-    transition: transform 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
 .card img {
     width: 100%;
     height: auto;
-    transition: transform 0.3s ease-in-out; 
 }
 
-.card:hover img {
-    transform: scale(1.1); 
+.card:hover {
+    transform: scale(1.05); 
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
 }
 
 .card-body {
@@ -130,12 +108,12 @@
     left: 0;
     right: 0;
     padding: 20px;
-    background: rgba(0, 0, 0, 0.5); 
+    background: linear-gradient(transparent, #150067); 
     color: white;
     z-index: 1;
     transition: background 0.3s ease-in-out;
 }
 
 .card:hover .card-body {
-    background: rgba(0, 0, 0, 0.7); 
+    background: linear-gradient(transparent, #150067); 
 }
