--- a/css/style.css
+++ b/css/style.css
@@ -117,3 +117,123 @@
 .card:hover .card-body {
     background: linear-gradient(transparent, #150067); 
 }
+
+
+/* CREADO PARA GENTE QUE MUEVE EL MUNDO */
+
+.full-height {
+    height: 100vh;
+}
+.half-width {
+    width: 50%;
+}
+
+.image-container {
+    position: relative;
+}
+.overlay-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-align: center;
+}
+
+.text-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(#150067, #3300ff); 
+    font-size: 3rem;
+    line-height: 1;
+}
+
+.text-container p {
+    display: flex;
+    align-items: center;
+    color: white; 
+    font-size: 4rem;
+    margin: 1em;
+}
+img, .gif {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+/* ABONOS */
+
+.title {
+    font-size: 3rem;
+    color: #3300ff;
+    font-weight: bold;
+    text-align: center;
+}
+.subtitle {
+    font-size: 1.2rem;
+    margin-bottom: 2rem;
+    color: #150067;
+    text-align: center;
+}
+.tickets {
+    background: linear-gradient(#150067, #3300ff); 
+    color: white;
+    border-radius: 15px;
+    padding: 2rem;
+    margin: 10px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.btn-custom {
+    background-color: transparent;
+    border: 2px solid #150067;
+    border-radius: 30px;
+    padding: 10px 30px;
+    color: #150067;
+    font-weight: bold;
+    cursor: pointer;
+    margin-top: 3rem;
+    display: block;
+    margin: 0 auto;    
+    transition: all 0.3s ease;
+    
+  }
+  .btn-custom:hover {
+    background-color: #1b1464;
+    color: white;
+  }
+  /* Ajustes para  iconos */
+  /* .icono-cartera {
+    font-size: 2rem;
+    margin-top: 1rem;
+  } */
+
+  /* PRUEBA */
+  .custom-cardnews {
+    border: 2px solid #3300ff;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+}
+
+.custom-cardnews img {
+    object-fit: cover;
+    height: 200px; 
+    width: 200px; 
+    border-radius: 8px;
+}
+
+.custom-cardnews h3{
+    margin: 1em;
+}
+
+
+.cardnews-title {
+    font-size: 1.5rem;
+    color: #2b2b75;
+    text-align: left; /* Texto justificado a la izquierda */
+}
