--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@
 
 /* CREADO PARA GENTE QUE MUEVE EL MUNDO */
 
-.full-height {
+/* .full-height {
     height: 100vh;
 }
 .half-width {
@@ -182,7 +182,7 @@ img, .gif {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
+} */
 
 
 /* ABONOS */
@@ -235,7 +235,51 @@ img, .gif {
     margin-top: 1rem;
   } */
 
-  
+/* ZETA RADIO */
+#radio {
+    text-align: center;
+}
+
+.video-radio-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#radio .card {
+    position: absolute;
+    z-index: 10;
+    border: 2px solid white;
+    border-radius: 15px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    overflow: hidden; /* Asegura que el contenido extra se recorte si es necesario */
+}
+
+#radio .card img {
+    width: 100%;
+    height: auto; /* Mantén la relación de aspecto de la imagen */
+    display: block;
+}
+
+#radio .video-radio {
+    width: 100%;
+    max-width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#radio video {
+    width: 100%;
+    max-width: 100vw;
+    height: auto;
+    max-height: 60vh;
+    object-fit: cover;
+    display: block;
+}
+
 /* Footer */
 
 .footer {
