--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
 
 
 /* HEADER */
-.navbar-expand-lg{
+/* HEADER */
+.navbar-expand-lg {
     background-color: transparent;
     z-index: 9999;
 }
@@ -14,25 +15,27 @@
     filter: invert(1);
 }
 
-/* Estilos para fijar el menú con margen superior */
+/* Estilos para el menú inicial con margen superior */
 .collapse.navbar-collapse {
     position: fixed;
     left: 0;
     right: 0;
-    top: 1em;
     z-index: 1000;
-    margin: 1em;
-    transition: background-color 0.3s ease;
+    transition: top 0.3s ease, background-color 0.3s ease; /* Transición suave */
+}
+
+.collapse.navbar-collapse.scrolled {
+    top: 0; 
+    background-color: rgb(22 0 106);
 }
 
 .navbar-nav {
-    justify-content: center; /* Centra los elementos del menú */
+    justify-content: center; 
 }
-
 
 .navbar-toggler {
     position: fixed;
-    top: 40px; /* Ajusta el botón de menú con el mismo margen */
+    top: 0; 
     right: 10px;
     z-index: 1100;
 }
@@ -44,8 +47,7 @@
     right: 0;
     top: 1em;
     z-index: 1000;
-    margin: 1em;
-    transition: background-color 0.3s ease; 
+    transition: background-color 0.6s ease; 
 }
 
 .collapse.navbar-collapse.scrolled {
@@ -322,6 +324,13 @@ img, .gif {
     max-height: 60vh;
     object-fit: cover;
     display: block;
+}
+
+iframe{
+    border-radius: 12px;
+    position: absolute;
+    z-index: 1000;
+    display: flex;
 }
 
 /* Footer */
