--- a/css/style.css
+++ b/css/style.css
@@ -197,49 +197,74 @@
     box-shadow: none; 
 }
 
-/* CREADO PARA GENTE QUE MUEVE EL MUNDO */
-
-/* .full-height {
-    height: 100vh;
-}
-.half-width {
-    width: 50%;
-}
-
-.image-container {
-    position: relative;
-}
-.overlay-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
+/* ARTISTAS */
+/* Estilos generales */
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
     text-align: center;
 }
 
-.text-container {
+.title, .subtitle {
+    margin-bottom: 20px;
+}
+
+/* Carrusel */
+.carousel-container {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+}
+
+.carousel {
+    display: flex;
+    transition: transform 0.5s ease;
+    /* Ajusta el espacio entre las imágenes */
+    gap: 10px;
+}
+
+/* Ajuste de cada ítem del carrusel */
+.carousel-item {
+    min-width: 250px; /* Ajusta este ancho según el tamaño deseado de cada foto */
+    flex-shrink: 0;
+}
+
+.carousel-item img {
+    width: 100%;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+/* Estilos para mostrar parcialmente las imágenes anteriores y siguientes */
+.carousel-container {
+    padding: 0 40px;
+    overflow: hidden;
     display: flex;
     justify-content: center;
-    align-items: center;
-    background: linear-gradient(#150067, #3300ff); 
-    font-size: 3rem;
-    line-height: 1;
 }
 
-.text-container p {
-    display: flex;
-    align-items: center;
-    color: white; 
-    font-size: 4rem;
-    margin: 1em;
-}
-img, .gif {
-    width: 100%;
+/* Agregamos flechas para navegar */
+.carousel-container::before,
+.carousel-container::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    width: 30px;
     height: 100%;
-    object-fit: cover;
-} */
+    background: linear-gradient(to right, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+    z-index: 1;
+    pointer-events: none;
+    transform: translateY(-50%);
+}
 
+.carousel-container::before {
+    left: 0;
+    transform: rotateY(180deg);
+}
+
+.carousel-container::after {
+    right: 0;
+}
 
 /* ABONOS */
 
