--- a/css/style.css
+++ b/css/style.css
@@ -280,6 +280,8 @@ iframe{
     display: flex;
 }
 
+
+
 /* Footer */
 
 .footer {
@@ -483,3 +485,14 @@ input:focus {
 .submit-btn:hover {
     background-color: #2200aa;
 }
+
+
+
+
+/* revisar - spoty */
+/* @media (max-width: 700px) {
+    iframe {
+     width: 90%;
+      padding-top: 80%; 
+    }
+  } */
