--- a/css/style.css
+++ b/css/style.css
@@ -198,203 +198,196 @@
     box-shadow: none; 
 }
 
-/* ARTISTAS */
-::-webkit-scrollbar {
-    width: 1em;
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    border-radius: 1em;
-    background: #797979;
-    transition: all 0.5s ease-in-out;
-  }
-  
-  ::-webkit-scrollbar-thumb:hover {
-    background: #222224;
-  }
-  
-  ::-webkit-scrollbar-track {
-    background: #f9f9f9;
-  }
-  
-  
-  
-  .container {
-    /* max-width: 124rem; */
-    padding: 0 1rem;
-    margin: 0 auto;
-    width: 100%;
-  }
-  
-  .text-center {
-    text-align: center;
-  }
-  
-  .section-heading {
-    font-size: 6em;  
-    color: var(--primary);
-    padding: 2rem 0;
-  }
-  
-  #tranding {
-    padding: 1rem 0;
-    
-  }
-  
-  @media (max-width:1440px) {
-    #tranding {
-      padding-top: 5em;    
-      }
-  }
-  
-  #tranding .tranding-slider {
-      height: 52em;  
-      padding: 2rem 0;
-    position: relative;
-  }
-  
-  @media (max-width:500px) {
-    #tranding .tranding-slider {
-      height: 45rem;
-    }
-  }
-  
-  .tranding-slide {
-    width: 37rem;
-    height: 42rem;
-    position: relative;
-  }
-  
-  @media (max-width:500px) {
-    .tranding-slide {
-      width: 28rem !important;
-      height: 36rem !important;
-    }
-    .tranding-slide .tranding-slide-img img {
-      width: 28rem !important;
-      height: 36rem !important;
-    }
-  }
-  
-  .tranding-slide .tranding-slide-img img {
-    width: 37rem;
-    height: 42rem;
-    border-radius: 2rem;
-    object-fit: cover;
-  }
-  
-  .tranding-slide .tranding-slide-content {
-    position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-  }
-  
-  .tranding-slide-content .place-icon {
-    position: absolute;
-    top: 2rem;
-    right: 2rem;
-    color: var(--white);
-    font-size: 4em;
-    margin-right: 0.5em;
-  
-  }
-  
-  .tranding-slide-content .tranding-slide-content-bottom {
-    position: absolute;
-    bottom: 2rem;
-    left: 2rem;
-    color: var(--white);
-  }
-  
-  .place-name{
-      font-size: 2em;
-  }
-  
-  .swiper-slide-shadow-left,
-  .swiper-slide-shadow-right {
-    display: none;
-  }
-  
-  .tranding-slider-control {
-    position: relative;
-    bottom: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .tranding-slider-control .swiper-button-next {
-    left: 58% !important;
-    transform: translateX(-58%) !important;
-  }
-  
-  @media (max-width:990px) {
-    .tranding-slider-control .swiper-button-next {
-      left: 70% !important;
-      transform: translateX(-70%) !important;
-    }
-  }
-  
-  @media (max-width:450px) {
-    .tranding-slider-control .swiper-button-next {
-      left: 80% !important;
-      transform: translateX(-80%) !important;
-    }
-  }
-  
-  @media (max-width:990px) {
-    .tranding-slider-control .swiper-button-prev {
-      left: 30% !important;
-      transform: translateX(-30%) !important;
-    }
-  }
-  
-  @media (max-width:450px) {
-    .tranding-slider-control .swiper-button-prev {
-      left: 20% !important;
-      transform: translateX(-20%) !important;
-    }
-  }
-  
-  .tranding-slider-control .slider-arrow {
-    background: var(--white);
-    width: 3.5rem;
-    height: 3.5rem;
-    border-radius: 50%;
-    left: 42%;
-    transform: translateX(-42%);
-    filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
-  }
-  
-  .tranding-slider-control .slider-arrow ion-icon {
-    font-size: 2rem;
-    color: #222224;
-  }
-  
-  .tranding-slider-control .slider-arrow::after {
-    content: '';
-  }
-  
-  .tranding-slider-control .swiper-pagination {
-    position: relative;
-    width: 15rem;
-    bottom: 1rem;
-  }
-  
-  .tranding-slider-control .swiper-pagination .swiper-pagination-bullet {
-    filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
-  }
-  
-  .tranding-slider-control .swiper-pagination .swiper-pagination-bullet-active {
-    background: var(--primary);
-  }
 
-  .swiper-slide {
-    transition: transform 0.5s ease-in-out;
-  }
+
+/* ARTISTAS */
+
+
+::-webkit-scrollbar {
+  width: 0.3em;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 0.5em;
+  background: #797979;
+  transition: all 0.5s ease-in-out;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #222224;
+}
+
+::-webkit-scrollbar-track {
+  background: #f9f9f9;
+}
+
+
+
+.container {
+  max-width: 124em;
+  padding: 0 1em;
+  margin: 0 auto;
+  width: 100%;
   
+
+}
+
+.text-center {
+  text-align: center;
+}
+
+.section-heading {
+  font-size: 3em;
+  color: var(--primary);
+  padding: 2rem 0;
+}
+
+#tranding {
+  padding: 4em 0;
+}
+
+@media (max-width:1440px) {
+  #tranding {
+    padding: 5em 0;
+  }
+}
+
+#tranding .tranding-slider {
+  height: 52em;
+  padding: 2em 0;
+  position: relative;
+}
+/* tranding-slide-content */
+
+@media (max-width:500px) {
+  #tranding .tranding-slider {
+    height: 45em;
+  }
+}
+
+.tranding-slide {
+  width: 37em;
+  height: 42em;
+  position: relative;
+}
+
+@media (max-width:500px) {
+  .tranding-slide {
+    width: 28em !important;
+    height: 36em !important;
+  }
+  .tranding-slide .tranding-slide-img img {
+    width: 28em !important;
+    height: 36em !important;
+  }
+}
+
+.tranding-slide .tranding-slide-img img {
+  width: 37em;
+  height: 42em;
+  border-radius: 2em;
+  object-fit: cover;
+}
+
+.tranding-slide .tranding-slide-content {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+
+}
+
+
+
+.tranding-slide-content .tranding-slide-content-bottom {
+  position: absolute;
+  bottom: 2em;
+  left: 2em;
+  color: var(--white);
+}
+
+
+
+.swiper-slide-shadow-left,
+.swiper-slide-shadow-right {
+  display: none;
+}
+
+.tranding-slider-control {
+  position: relative;
+  bottom: 2em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.tranding-slider-control .swiper-button-next {
+  left: 58% !important;
+  transform: translateX(-58%) !important;
+}
+
+@media (max-width:990px) {
+  .tranding-slider-control .swiper-button-next {
+    left: 70% !important;
+    transform: translateX(-70%) !important;
+  }
+}
+
+@media (max-width:450px) {
+  .tranding-slider-control .swiper-button-next {
+    left: 80% !important;
+    transform: translateX(-80%) !important;
+  }
+}
+
+@media (max-width:990px) {
+  .tranding-slider-control .swiper-button-prev {
+    left: 30% !important;
+    transform: translateX(-30%) !important;
+  }
+}
+
+@media (max-width:450px) {
+  .tranding-slider-control .swiper-button-prev {
+    left: 20% !important;
+    transform: translateX(-20%) !important;
+  }
+}
+
+.tranding-slider-control .slider-arrow {
+  background: var(--white);
+  width: 3.5em;
+  height: 3.5em;
+  border-radius: 50%;
+  left: 42%;
+  transform: translateX(-42%);
+  filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
+}
+
+
+.tranding-slider-control .slider-arrow::after {
+  content: '';
+}
+
+.tranding-slider-control .swiper-pagination {
+  position: relative;
+  width: 15em;
+  bottom: 1em;
+}
+
+.tranding-slider-control .swiper-pagination .swiper-pagination-bullet {
+  filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
+}
+
+.tranding-slider-control .swiper-pagination .swiper-pagination-bullet-active {
+  background: var(--primary);
+}
+
+
+
+
+
 /* ABONOS */
 
 .title {
