--- a/paginas/css/style_compra.css
+++ b/paginas/css/style_compra.css
@@ -102,6 +102,59 @@ p{
     color: #2200aa;
 }
 
+#ver-mas {
+    background-color: #2200aa; /* Color de fondo */
+    color: white; /* Color de texto */
+    border-radius: 20px;
+    padding: 10px 20px;
+    text-decoration: none;
+    font-weight: bold;
+    display: inline-block;
+    transition: background-color 0.3s;
+    margin-right: 20px;
+}
+
+#ver-mas:hover {
+    background-color: #f0f0f0;
+    color: #2200aa;
+}
+
+
+/* Estilo del popup */
+.popup2 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: none; /* Inicialmente oculto */
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.popup2-content {
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    width: 80%;
+    max-width: 400px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.popup2-content p {
+    margin-bottom: 20px;
+}
+
+.popup2-content .btn {
+    background-color: #2200aa;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 20px;
+    cursor: pointer;
+}
 
 /* Footer */
 
