--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
 
 
   
+
+
 /* HEADER */
 .navbar-expand-lg {
     background-color: transparent;
@@ -14,13 +16,12 @@
     filter: invert(1);
 }
 
-/* Estilos para el menú inicial con margen superior */
 .collapse.navbar-collapse {
     position: fixed;
     left: 0;
     right: 0;
     z-index: 1000;
-    transition: top 0.3s ease, background-color 0.3s ease; /* Transición suave */
+    transition: top 0.3s ease, background-color 0.3s ease; 
 }
 
 .collapse.navbar-collapse.scrolled {
@@ -224,7 +225,7 @@
 
 
 .container {
-  max-width: 124em;
+  max-width: 100vw;
   padding: 0 1em;
   margin: 0 auto;
   width: 100%;
@@ -283,8 +284,8 @@
 }
 
 .tranding-slide .tranding-slide-img img {
-  width: 37em;
-  height: 42em;
+  width: 27em;
+  height: 32em;
   border-radius: 2em;
   object-fit: cover;
 }
@@ -383,7 +384,6 @@
 .tranding-slider-control .swiper-pagination .swiper-pagination-bullet-active {
   background: var(--primary);
 }
-
 
 
 
