--- a/paginas/css/style_compra.css
+++ b/paginas/css/style_compra.css
@@ -122,39 +122,43 @@ p{
 
 /* Estilo del popup */
 .popup2 {
+    display: none; /* Oculto por defecto */
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    display: none; /* Inicialmente oculto */
+    background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
     justify-content: center;
     align-items: center;
     z-index: 1000;
 }
 
 .popup2-content {
-    background: #fff;
+    background-color: #fff;
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 8px;
     text-align: center;
-    width: 80%;
     max-width: 400px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    width: 90%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.popup2-content p {
-    margin-bottom: 20px;
-}
-
-.popup2-content .btn {
-    background-color: #2200aa;
-    color: #fff;
+.btn-custom2 {
+    margin-top: 20px;
     padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
     border-radius: 20px;
     cursor: pointer;
 }
+
+.btn-custom2:hover {
+    background-color: #0056b3;
+}
+
+
 
 /* Footer */
 
@@ -199,3 +203,6 @@ p{
 .container .artist{
     font-size:80%;
 }
+
+
+
