--- a/paginas/css/style_compra.css
+++ b/paginas/css/style_compra.css
@@ -1,3 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+    font-family: "DM Sans", sans-serif;
+
+        
+}
+    
+:root {
+    --indigo: #150067;
+    --intenso: #1b008b;
+    --electrico: #2400bf;
+    --ultravioleta: #2d00da;
+    --neon: #3300ff;
+    --white: #ffffff;
+    --black: black;
+}
+    
+
+html {
+    scroll-behavior: smooth;
+}
+
+
 body {
     background: linear-gradient(#150067, #3300ff);
     color: #f8f9fa; 
@@ -10,7 +39,7 @@ p{
 }
 
 .header {
-    background-color: white;
+    background-color: var(--white);
     padding: 20px;
     text-align: center;
 }
@@ -20,7 +49,7 @@ p{
 }
 
 .back-home-btn {
-    background-color: #2200aa; 
+    background-color: var(--ultravioleta); 
     color: white;           
     border-radius: 20px;
 }
@@ -28,14 +57,14 @@ p{
 
 .title {
     font-size: 3em;
-    color: white;
+    color: var(--white);
     text-align: center;
     margin-bottom: 10px;
 }
 
 .subtitle {
     text-align: center;
-    color: white;
+    color: var(--white);
     margin-bottom: 40px;
 }
 
@@ -51,14 +80,14 @@ p{
 }
 
 .card-img-top {
-    max-height: 200px;       /* Ajusta la altura según lo necesario */
-    object-fit: cover;       /* Mantiene la proporción de la imagen y la recorta si es necesario */
-    border-radius: 20px 20px 0px 0px; /* Borde redondeado solo en la parte superior */
+    max-height: 200px;      
+    object-fit: cover;       
+    border-radius: 20px 20px 0px 0px; 
 }
 
 
 .card-body {
-    flex: 1; /* Permite que el cuerpo de la tarjeta ocupe todo el espacio disponible */
+    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -67,44 +96,43 @@ p{
 
 .price {
     font-size: 1.2rem;
-    color: #2200aa;
+    color: var(--ultravioleta);
     margin: 10px 0;
 }
 
 .btn-custom {
-    background-color: #2200aa;
-    color: #fff;
+    background-color: var(--ultravioleta);
+    color: var(--white);
     padding: 10px 20px;
     border-radius: 20px;
     transition: background-color 0.3s;
 }
 
 .btn-custom:hover {
-    background-color: white;
-    border-color: #2200aa;
-    color: #2200aa;
+    background-color: var(--white);
+    border-color: var(--ultravioleta);
+    color: var(--neon);
 }
 
 .btn-custom-buy {
-    background-color: white;       /* Fondo blanco solo para el botón */
-    color: #2200aa;                  /* Color del texto para contraste */
-    border: 1px solid #ddd;        /* Borde ligero */
-    padding: 10px 20px;            /* Espaciado interno */
-    border-radius: 20px;            /* Bordes redondeados */
-    text-decoration: none;         /* Elimina el subrayado del enlace */
-    font-weight: bold;             /* Hace el texto más grueso */
-    display: inline-block;         /* Para asegurar que el botón tenga un formato de bloque en línea */
+    background-color: var(--white);       
+    color: var(--ultravioleta);                  
+    border: 1px solid --white;       
+    padding: 10px 20px;            
+    border-radius: 20px;           
+    text-decoration: none;        
+    font-weight: bold;            
+    display: inline-block;         
 }
 
-/* Efecto de hover para el botón */
 .btn-custom-buy:hover {
-    background-color: #f0f0f0; /* Fondo gris claro al pasar el cursor */
-    color: #2200aa;
+    background-color: var(--white); 
+    color: var(--intenso);
 }
 
 #ver-mas {
-    background-color: #2200aa; /* Color de fondo */
-    color: white; /* Color de texto */
+    background-color: var(--intenso); 
+    color: var(--white);
     border-radius: 20px;
     padding: 10px 20px;
     text-decoration: none;
@@ -115,20 +143,20 @@ p{
 }
 
 #ver-mas:hover {
-    background-color: #f0f0f0;
-    color: #2200aa;
+    background-color: var(--white);
+    color: var(--neon);
 }
 
 
 /* Estilo del popup */
 .popup2 {
-    display: none; /* Oculto por defecto */
+    display: none; 
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
+    background-color: rgba(0, 0, 0, 0.5); 
     justify-content: center;
     align-items: center;
     z-index: 1000;
@@ -147,7 +175,7 @@ p{
 .btn-custom2 {
     margin-top: 20px;
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color: var(--neon);
     color: #fff;
     border: none;
     border-radius: 20px;
@@ -155,7 +183,7 @@ p{
 }
 
 .btn-custom2:hover {
-    background-color: #0056b3;
+    background-color: var(--intenso);
 }
 
 
@@ -163,16 +191,16 @@ p{
 /* Footer */
 
 .footer {
-    background-color: white;
+    background-color: var(--white);
     padding: 40px 0;
-    color: #3300ff;
+    color: var(--neon);
     text-align: center;
 }
 
 .footer-title {
     font-size: 10rem;
     font-weight: bold;
-    color: #3300ff;
+    color: var(--neon);
 }
 
 .social-icons img {
@@ -180,24 +208,24 @@ p{
 }
 
 .social-icons a {
-    color: #3300ff;
+    color: var(--neon);
     font-size: 30px; 
     margin: 0 10px;
     transition: color 0.3s ease;
 }
 
 .social-icons a:hover {
-    color: #2200aa;
+    color: var(--ultravioleta);
 }
 
 .links-grid a {
-    color: #3300ff;
+    color: var(--neon);
     text-decoration: none;
     transition: color 0.3s ease;
 }
 
 .links-grid a:hover {
-    color: #2200aa;
+    color: var(--ultravioleta);
 }
 
 .container .artist{
