--- a/css/style.css
+++ b/css/style.css
@@ -229,188 +229,53 @@ html {
 
 
 /* ARTISTAS */
-
-
-::-webkit-scrollbar {
-  width: 0.3em;
+.collection {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-::-webkit-scrollbar-thumb {
-  border-radius: 0.5em;
-  background: #797979;
-  transition: all 0.5s ease-in-out;
+.collection .content {
+  height: 28rem;
+  width: 25rem;
+  background-color: #1b1f2a;
+  border-radius: 0.7rem;
+  overflow: hidden;
+  position: relative;
 }
 
-::-webkit-scrollbar-thumb:hover {
-  background: var(--ultravioleta);
-}
-
-::-webkit-scrollbar-track {
-  background: var(--white);
-}
-
-
-
-.container {
-  max-width: 80vw;
-  padding: 0 auto;
-  margin: 0 auto;
+.content img {
   width: 100%;
-  
-
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 
-.text-center {
+.text-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  z-index: 2;
+  color: #ffffff;
+  padding: 1rem;
   text-align: center;
 }
 
-.section-heading {
-  font-size: 3em;
-  color: var(--primary);
-  padding: 2rem 0;
+.text-content h3 {
+  font-size: 1.7rem;
+  font-weight: 500;
+  color: #ffffff;
+  margin: 0;
 }
 
-#tranding {
-  padding: 4em 0;
-}
-
-@media (max-width:1440px) {
-  #tranding {
-    padding: 5em 0;
-  }
-}
-
-#tranding .tranding-slider {
-  height: 52em;
-  padding: 2em 0;
-  position: relative;
-}
-/* tranding-slide-content */
-
-@media (max-width:500px) {
-  #tranding .tranding-slider {
-    height: 45em;
-  }
-}
-
-.tranding-slide {
-  width: 37em;
-  height: 42em;
-  position: relative;
-}
-
-@media (max-width:500px) {
-  .tranding-slide {
-    width: 28em !important;
-    height: 36em !important;
-  }
-  .tranding-slide .tranding-slide-img img {
-    width: 28em !important;
-    height: 36em !important;
-  }
-}
-
-.tranding-slide .tranding-slide-img img {
-  width: 27em;
-  height: 32em;
-  border-radius: 2em;
-  object-fit: cover;
-}
-
-.tranding-slide .tranding-slide-content {
-  position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-
-}
-
-
-
-.tranding-slide-content .tranding-slide-content-bottom {
-  position: absolute;
-  bottom: 2em;
-  left: 2em;
-  color: var(--intenso);
-}
-
-
-
-.swiper-slide-shadow-left,
-.swiper-slide-shadow-right {
-  display: none;
-}
-
-.tranding-slider-control {
-  position: relative;
-  bottom: 2em;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.tranding-slider-control .swiper-button-next {
-  left: 58% !important;
-  transform: translateX(-58%) !important;
-}
-
-@media (max-width:990px) {
-  .tranding-slider-control .swiper-button-next {
-    left: 70% !important;
-    transform: translateX(-70%) !important;
-  }
-}
-
-@media (max-width:450px) {
-  .tranding-slider-control .swiper-button-next {
-    left: 80% !important;
-    transform: translateX(-80%) !important;
-  }
-}
-
-@media (max-width:990px) {
-  .tranding-slider-control .swiper-button-prev {
-    left: 30% !important;
-    transform: translateX(-30%) !important;
-  }
-}
-
-@media (max-width:450px) {
-  .tranding-slider-control .swiper-button-prev {
-    left: 20% !important;
-    transform: translateX(-20%) !important;
-  }
-}
-
-.tranding-slider-control .slider-arrow {
-  background: var(--white);
-  width: 3.5em;
-  height: 3.5em;
-  border-radius: 50%;
-  left: 42%;
-  transform: translateX(-42%);
-  filter: drop-shadow(0px 8px 24px --neon);
-}
-
-
-.tranding-slider-control .slider-arrow::after {
-  content: '';
-}
-
-.tranding-slider-control .swiper-pagination {
-  position: relative;
-  width: 15em;
-  bottom: 1em;
-}
-
-.tranding-slider-control .swiper-pagination .swiper-pagination-bullet {
-  filter: drop-shadow(0px 8px 24px --neon);
-}
-
-.tranding-slider-control .swiper-pagination .swiper-pagination-bullet-active {
-  background: var(--primary);
-}
 
 
 
@@ -458,6 +323,7 @@ html {
     background-color: #1b1464;
     color: white;
 }
+
 
 /* ZETA RADIO */
 #radio {
@@ -537,49 +403,64 @@ html {
 
 
 /* NEWS */
-
 #news .card {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    border: none; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border: none;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  border-radius: 10px; 
 }
 
 #news .card-img-left {
-    width: 200px; 
-    height: 225px; 
-    object-fit: cover; 
-    border-radius: 10px; 
+  width: 200px;         
+  height: 200px;        
+  object-fit: cover;    
+  border-radius: 10px;  
 }
 
 #news .card-news {
-    width: 60%; 
-    padding: 15px;
+  width: 60%;           
+  padding: 15px;
 }
 
 #news .card-title {
-    font-size: 1.5rem;
-    color: var(--intenso);
-    margin-bottom: 10px;
+  font-size: 1.5rem;
+  color: var(--intenso);
+  margin-bottom: 10px;
 }
 
 #news .card-text {
-    font-size: 1rem;
-    color: var(--ultravioleta);
+  font-size: 1rem;
+  color: var(--ultravioleta);
 }
 
 .card-news .btn-link {
-    text-decoration: none;
+  text-decoration: none;
+  color: inherit;       
 }
 
 .card-news .btn-link:hover {
-    text-decoration: none; 
+  text-decoration: none; 
+  color: var(--intenso); 
 }
 
-#experience {
-    margin: none !important;
+@media (max-width: 768px) {
+  #news .card {
+      flex-direction: column;    
+      text-align: center;
+  }
+
+  #news .card-img-left {
+      width: 100%;             
+      height: auto;             
+      margin-bottom: 15px;      
+  }
+
+  #news .card-news {
+      width: 100%;             
+  }
 }
 
 
@@ -740,4 +621,9 @@ input:focus {
 .right-section h2 {
     font-size: 3rem;
     font-weight: bold;
+}
+
+.row h-100{
+  display: flex;
+
 }
