--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,10 @@ html {
     z-index: 1100;
 }
 
+.navbar-expand-lg, .collapse.navbar-collapse {
+    width: 100%;
+}
+
 /* FONDO COLOR MENÚ SCROLL*/
 .collapse.navbar-collapse {
     position: fixed;
@@ -161,6 +165,23 @@ html {
     padding: 2em;
 }
 
+
+.collection, .content {
+    max-width: 100%;
+}
+
+.collection .content {
+    width: 100%;
+    max-width: 100vw;
+    height: auto;
+    overflow: hidden;
+}
+
+.content img {
+    width: 100%;
+    max-width: 100%;
+}
+
 /* LO PRINCIPAL */
 
 .card {
@@ -221,10 +242,9 @@ html {
 
 /* CREATE */
 .section-with-margins {
-    margin-bottom: 0; /* Eliminar o reducir el espacio inferior */
-  }
+    margin-bottom: 0;
+}
   
-  /* General styling */
   .left-section,
   .right-section {
     display: flex;
@@ -233,7 +253,6 @@ html {
     height: 100vh;
   }
   
-  /* Left Section */
   .left-section {
     position: relative;
     overflow: hidden;
@@ -262,7 +281,6 @@ html {
     z-index: 1;
   }
   
-  /* Right Section */
   .right-section {
     color: var(--ultravioleta);
     text-align: center;
@@ -273,7 +291,6 @@ html {
     font-weight: bold;
   }
   
-  /* Media query for tablet and mobile */
   @media (max-width: 768px) {
     .row {
       display: flex;
@@ -281,13 +298,13 @@ html {
   
     .left-section,
     .right-section {
-      height: auto; /* Use natural height */
+      height: auto; 
     }
   
     .left-section h1,
     .right-section h2 {
-      font-size: 2rem; /* Adjust font size for better readability */
-      padding: 1rem; /* Add padding for spacing */
+      font-size: 2rem; 
+      padding: 1rem; 
     }
   }
   
@@ -380,12 +397,14 @@ html {
 
 #countdown {
     font-size: 1rem; 
-    color: #3300ff;
+    color: var(--neon);
     font-weight: bold;
 }
 
+
+
 /* ARTISTAS */
-  
+
 .collection {
   margin-top: -6rem;
   margin-bottom: -6rem;
